[project]
name = "saudi-date-classifier"
version = "0.1.0"
description = "Saudi Date Fruit Variety Classifier with Multi-Architecture Comparison and Explainability"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=1.0",
    "transformers>=4.40",
    "albumentations>=1.4",
    "gradio>=4.0",
    "pytorch-grad-cam>=1.5",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel"]
